--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 {% include base_path %}
 
-<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=KT9Wj_ScBGwhngljyunPYjD1ukaG6-F7vslTpVT0Soc&cl=ffffff&w=a"></script>
+
+<a href="https://clustrmaps.com/site/1a4mb" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=KT9Wj_ScBGwhngljyunPYjD1ukaG6-F7vslTpVT0Soc&cl=ffffff"></a>
 
 <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
