--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,3 @@
 <!-- start custom footer snippets -->
-<a href="/sitemap/">Sitemap</a>
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=KT9Wj_ScBGwhngljyunPYjD1ukaG6-F7vslTpVT0Soc&cl=ffffff&w=a"></script>
 <!-- end custom footer snippets -->
