--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -29,19 +29,25 @@
         <li><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> {{ author.employer }}</li>
       {% endif %}
       {% if author.uri %}
-        <li><a href="{{ author.uri }}"><i class="fa fa-fw fa-chain" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].website_label | default: "ITP-CAS Website" }}</a></li>
+        <li><a href="{{ author.uri }}"><i class="fa fa-fw fa-chain" aria-hidden="true"></i>ITP-CAS Website</a></li>
       {% endif %}
       {% if author.email %}
-        <li><a href="mailto:{{ author.email }}"><i class="fa fa-fw fa-envelope-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].email_label | default: "Email:jhyu@itp.ac.cn" }}</a></li>
+        <li><a href="mailto:{{ author.email }}"><i class="fa fa-fw fa-envelope-square" aria-hidden="true"></i>Email:jhyu@itp.ac.cn"</a></li>
       {% endif %}
       {% if author.keybase %}
         <li><a href="https://keybase.io/{{ author.keybase }}"><i class="fa fa-fw fa-key" aria-hidden="true"></i> Keybase</a></li>
       {% endif %}
       {% if author.inspirehep %}
-        <li><a href="https://inspirehep.net/authors/1066117"><i class="fa fa-fw fa-bookmark" aria-hidden="true"></i> InspireHEP</a></li>
+        <li><a href="https://inspirehep.net/authors/1066117"><i class="fa fa-fw fa-bookmark" aria-hidden="true"></i>My INSPIREHEP Page</a></li>
       {% endif %}
       {% if author.arxiv %}
-        <li><a href="https://arxiv.org/list/hep-ph/new"><i class="fa fa-fw fa-orcid" aria-hidden="true"></i> ArXiv</a></li>
+        <li><a href="https://arxiv.org/list/hep-ph/new"><i class="fa fa-fw fa-book-open" aria-hidden="true"></i>arXiv hep-ph</a></li>
+      {% endif %}
+      {% if author.itpcas %}
+        <li><a href="https://www.itp.cas.cn/"><i class="fa fa-fw fa-University" aria-hidden="true"></i>ITP-CAS website</a></li>
+      {% endif %}
+      {% if author.casmail %}
+        <li><a href="https://mail.cstnet.cn"><i class="fa fa-fw fa-Envelope" aria-hidden="true"></i>CAS Mail</a></li>
       {% endif %}
       {% if author.twitter %}
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fa fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
