--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -41,13 +41,13 @@
         <li><a href="https://inspirehep.net/authors/1066117"><i class="fa fa-fw fa-bookmark" aria-hidden="true"></i>My INSPIREHEP Page</a></li>
       {% endif %}
       {% if author.arxiv %}
-        <li><a href="https://arxiv.org/list/hep-ph/new"><i class="fa fa-fw fa-book-open" aria-hidden="true"></i>arXiv hep-ph</a></li>
+        <li><a href="https://arxiv.org/list/hep-ph/new"><i class="fa fa-fw fa-book" aria-hidden="true"></i>arXiv hep-ph</a></li>
       {% endif %}
       {% if author.itpcas %}
-        <li><a href="https://www.itp.cas.cn/"><i class="fa fa-fw fa-University" aria-hidden="true"></i>ITP-CAS website</a></li>
+        <li><a href="https://www.itp.cas.cn/"><i class="fa fa-fw fa-university" aria-hidden="true"></i>ITP-CAS website</a></li>
       {% endif %}
       {% if author.casmail %}
-        <li><a href="https://mail.cstnet.cn"><i class="fa fa-fw fa-Envelope" aria-hidden="true"></i>CAS Mail</a></li>
+        <li><a href="https://mail.cstnet.cn"><i class="fa fa-fw fa-envelope" aria-hidden="true"></i>CAS Mail</a></li>
       {% endif %}
       {% if author.twitter %}
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fa fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
