--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -32,7 +32,7 @@
         <li><a href="{{ author.uri }}"><i class="fa fa-fw fa-chain" aria-hidden="true"></i>ITP-CAS Website</a></li>
       {% endif %}
       {% if author.email %}
-        <li><a href="mailto:{{ author.email }}"><i class="fa fa-fw fa-envelope-square" aria-hidden="true"></i>Email:jhyu@itp.ac.cn"</a></li>
+        <li><a href="mailto:{{ author.email }}"><i class="fa fa-fw fa-envelope-square" aria-hidden="true"></i>Email:jhyu@itp.ac.cn</a></li>
       {% endif %}
       {% if author.keybase %}
         <li><a href="https://keybase.io/{{ author.keybase }}"><i class="fa fa-fw fa-key" aria-hidden="true"></i> Keybase</a></li>
@@ -47,7 +47,7 @@
         <li><a href="https://www.itp.cas.cn/"><i class="fa fa-fw fa-university" aria-hidden="true"></i>ITP-CAS website</a></li>
       {% endif %}
       {% if author.casmail %}
-        <li><a href="https://mail.cstnet.cn"><i class="fa fa-fw fa-envelope" aria-hidden="true"></i>CAS Mail</a></li>
+        <li><a href="https://mail.cstnet.cn"><i class="fa fa-fw fa-envelope" aria-hidden="true"></i>CAS Mail Link</a></li>
       {% endif %}
       {% if author.twitter %}
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fa fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
