--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,20 @@
 {% include base_path %}
 
 
+		<table class="bc" align="center";>
+			<tr>
+				<th>
+					<script type="text/javascript" src="https://ipaddress.is/js/ipwidget.js"></script>
+					<script type="text/javascript">var ip_widget_var = ip_widget_var || [];ip_widget("#ffffff","#edfeff","#000000",0,0,800);</script>
+					<noscript><a href="https://ipaddress.is">IP Address Lookup</a></noscript>
+				</th>
+				<th>
+					&nbsp;&nbsp;&nbsp;<script type="text/javascript" src="https://widget.supercounters.com/ssl/hit.js"></script><script type="text/javascript">sc_hit(1206227,142,6);</script><br><noscript><a href="https://www.supercounters.com" target="_blank">Tumblr Hit Counter</a></noscript>
+				</th>
+			</tr>
+		</table>
+
+
 <!-- <a href="https://clustrmaps.com/site/1a4mb" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=KT9Wj_ScBGwhngljyunPYjD1ukaG6-F7vslTpVT0Soc&cl=ffffff" width="300"></a> -->
 
 <!-- <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div> -->
