--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,8 @@
 					<noscript><a href="https://ipaddress.is">IP Address Lookup</a></noscript>
 				</th>
 				<th>
-					&nbsp;&nbsp;&nbsp;<script type="text/javascript" src="https://widget.supercounters.com/ssl/hit.js"></script><script type="text/javascript">sc_hit(1206227,142,6);</script><br><noscript><a href="https://www.supercounters.com" target="_blank">Tumblr Hit Counter</a></noscript>
+					&nbsp;&nbsp;&nbsp; <center><script type="text/javascript" src="//widget.supercounters.com/ssl/hit.js"></script><script type="text/javascript">sc_hit(1592642,0,5);</script><br><noscript><a href="http://www.supercounters.com/">free online counter</a></noscript>
+</center>
 				</th>
 			</tr>
 		</table>
