--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,6 @@
 
 
 	<footer>
-		<br><br><br><br>
 		<table class="bc" align="center";>
 			<tr>
 				<th>
@@ -11,7 +10,7 @@
 					<noscript><a href="https://ipaddress.is">IP Address Lookup</a></noscript>
 				</th>
 				<th>
-					&nbsp;&nbsp;&nbsp; <center><script type="text/javascript" src="//widget.supercounters.com/ssl/hit.js"></script><script type="text/javascript">sc_hit(1592642,0,5);</script><br><noscript><a href="http://www.supercounters.com/">free online counter</a></noscript>
+					<center><script type="text/javascript" src="//widget.supercounters.com/ssl/hit.js"></script><script type="text/javascript">sc_hit(1592642,0,5);</script><br><noscript><a href="http://www.supercounters.com/">free online counter</a></noscript>
 </center>
 				</th>
 			</tr>
