--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,9 @@
 <!--{% include base_path %}-->
-	<footer>
-		<table class="bc" align="center";>
-			<tr>
-				<th>
-					<script type="text/javascript" src="https://ipaddress.is/js/ipwidget.js"></script>
-					<script type="text/javascript">var ip_widget_var = ip_widget_var || [];ip_widget("#ffffff","#edfeff","#000000",0,0,800);</script>
+<div style="width: 300px; margin: 0 auto">
+	<script type="text/javascript">var ip_widget_var = ip_widget_var || [];ip_widget("#ffffff","#edfeff","#000000",0,0,800);</script>
 					<noscript><a href="https://ipaddress.is">IP Address Lookup</a></noscript>
-				</th>
-				<th>
-					<center><script type="text/javascript" src="//widget.supercounters.com/ssl/hit.js"></script><script type="text/javascript">sc_hit(1592642,0,5);</script><br><noscript><a href="http://www.supercounters.com/">free online counter</a></noscript>
-</center>
-				</th>
-			</tr>
-		</table>
-	</footer>
+  <script type="text/javascript" src="//widget.supercounters.com/ssl/hit.js"></script><script type="text/javascript">sc_hit(1592642,0,5);</script><br><noscript><a href="http://www.supercounters.com/">free online counter</a></noscript>
+</div>
 
 <!-- <a href="https://clustrmaps.com/site/1a4mb" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=KT9Wj_ScBGwhngljyunPYjD1ukaG6-F7vslTpVT0Soc&cl=ffffff" width="300"></a> -->
 
